<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <artifactId>galileitransformation</artifactId>
      <groupId>de.thkwalter</groupId>
      <version>0.1-SNAPSHOT</version>
   </parent>

   <artifactId>galileitransformation-service</artifactId>
   <name>galileitransformation-service</name>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>20</maven.compiler.source>
      <maven.compiler.target>20</maven.compiler.target>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
      </dependency>

      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>au.com.dius</groupId>
         <artifactId>pact-jvm-provider-junit5</artifactId>
         <version>4.0.3</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>tech.units</groupId>
         <artifactId>indriya</artifactId>
         <version>2.0-EDR</version>
      </dependency>

      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>3.2.4</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>

         <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <executions>
               <execution>
                  <phase>process-resources</phase>
                  <goals>
                     <goal>copy-resources</goal>
                  </goals>
                  <configuration>
                     <outputDirectory>${basedir}/target/test-classes/pacts</outputDirectory>
                     <resources>
                        <resource>
                           <directory>${basedir}/../galileitransformation-client/target/pacts</directory>
                           <filtering>false</filtering>
                        </resource>
                     </resources>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>

</project>
